cmake_minimum_required(VERSION 3.5)
project(SpectralClustering_master)

set(CMAKE_CXX_STANDARD 11)

include_directories(Projects/SpecCPP/include)
include_directories(Projects/SpecCPP/third_party/boost/libs/graph/include)
include_directories(Projects/SpecCPP/third_party/boost/libs/graph/include/boost)
include_directories(Projects/SpecCPP/third_party/boost/libs/graph/include/boost/detail)
include_directories(Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph)
include_directories(Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail)
include_directories(Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/planar_detail)
include_directories(Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/property_maps)
include_directories(Projects/SpecCPP/third_party/boost/libs/graph/include/boost/pending)
include_directories(Projects/SpecCPP/third_party/boost/libs/graph/include/boost/pending/detail)
include_directories(Projects/SpecCPP2/include)
include_directories(Projects/SpecCPP2/third_party/boost/libs/graph/include)
include_directories(Projects/SpecCPP2/third_party/boost/libs/graph/include/boost)
include_directories(Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/detail)
include_directories(Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph)
include_directories(Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail)
include_directories(Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/planar_detail)
include_directories(Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/property_maps)
include_directories(Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/pending)
include_directories(Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/pending/detail)
include_directories(Projects/SpecMatlab/include)

add_executable(SpectralClustering_master
        Projects/SpecCPP/include/misc.h
        Projects/SpecCPP/include/scenegraph.h
        Projects/SpecCPP/src/scenegraph.cpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/detail/algorithm.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/adj_list_edge_iterator.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/adjacency_list.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/array_binary_tree.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/augment.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/compressed_sparse_row_struct.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/connected_components.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/d_ary_heap.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/edge.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/geodesic.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/histogram_sort.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/incidence_iterator.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/incremental_components.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/index.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/indexed_properties.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/is_distributed_selector.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/labeled_graph_traits.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/list_base.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/permutation.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/read_graphviz_new.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/read_graphviz_spirit.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/self_avoiding_walk.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/set_adaptor.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/shadow_iterator.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/detail/sparse_ordering.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/planar_detail/add_edge_visitors.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/planar_detail/boyer_myrvold_impl.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/planar_detail/bucket_sort.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/planar_detail/face_handles.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/planar_detail/face_iterators.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/property_maps/constant_property_map.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/property_maps/container_property_map.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/property_maps/matrix_property_map.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/property_maps/null_property_map.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/adj_list_serialize.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/adjacency_iterator.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/adjacency_list.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/adjacency_list_io.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/adjacency_matrix.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/astar_search.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/bandwidth.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/bc_clustering.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/bellman_ford_shortest_paths.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/betweenness_centrality.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/biconnected_components.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/bipartite.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/boyer_myrvold_planar_test.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/boykov_kolmogorov_max_flow.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/breadth_first_search.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/bron_kerbosch_all_cliques.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/buffer_concepts.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/chrobak_payne_drawing.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/circle_layout.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/closeness_centrality.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/clustering_coefficient.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/compressed_sparse_row_graph.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/connected_components.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/copy.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/core_numbers.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/create_condensation_graph.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/cuthill_mckee_ordering.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/cycle_canceling.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/dag_shortest_paths.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/degree_centrality.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/depth_first_search.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/dijkstra_shortest_paths.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/dijkstra_shortest_paths_no_color_map.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/dimacs.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/directed_graph.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/dll_import_export.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/dominator_tree.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/eccentricity.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/edge_coloring.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/edge_connectivity.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/edge_list.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/edmonds_karp_max_flow.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/edmunds_karp_max_flow.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/erdos_renyi_generator.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/exception.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/exterior_property.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/filtered_graph.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/find_flow_cost.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/floyd_warshall_shortest.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/fruchterman_reingold.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/geodesic_distance.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/graph_archetypes.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/graph_as_tree.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/graph_concepts.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/graph_mutability_traits.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/graph_selectors.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/graph_stats.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/graph_test.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/graph_traits.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/graph_utility.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/graphml.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/graphviz.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/grid_graph.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/gursoy_atun_layout.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/hawick_circuits.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/howard_cycle_ratio.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/incremental_components.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/is_kuratowski_subgraph.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/is_straight_line_drawing.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/isomorphism.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/iteration_macros.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/iteration_macros_undef.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/johnson_all_pairs_shortest.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/kamada_kawai_spring_layout.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/king_ordering.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/kruskal_min_spanning_tree.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/labeled_graph.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/leda_graph.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/lookup_edge.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/loop_erased_random_walk.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/make_biconnected_planar.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/make_connected.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/make_maximal_planar.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/matrix_as_graph.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/max_cardinality_matching.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/maximum_adjacency_search.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/mcgregor_common_subgraphs.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/mesh_graph_generator.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/metis.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/metric_tsp_approx.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/minimum_degree_ordering.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/named_function_params.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/named_graph.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/neighbor_bfs.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/numeric_values.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/one_bit_color_map.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/overloading.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/page_rank.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/planar_canonical_ordering.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/planar_face_traversal.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/plod_generator.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/point_traits.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/prim_minimum_spanning_tree.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/profile.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/properties.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/property_iter_range.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/push_relabel_max_flow.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/r_c_shortest_paths.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/random.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/random_layout.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/random_spanning_tree.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/read_dimacs.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/relax.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/reverse_graph.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/rmat_graph_generator.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/sequential_vertex_coloring.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/simple_point.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/sloan_ordering.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/small_world_generator.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/smallest_last_ordering.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/ssca_graph_generator.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/st_connected.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/stanford_graph.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/stoer_wagner_min_cut.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/strong_components.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/subgraph.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/successive_shortest_path_nonnegative_weights.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/tiernan_all_cycles.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/topological_sort.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/topology.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/transitive_closure.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/transitive_reduction.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/transpose_graph.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/tree_traits.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/two_bit_color_map.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/two_graphs_common_spanning_trees.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/undirected_dfs.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/undirected_graph.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/use_mpi.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/vector_as_graph.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/vertex_and_edge_range.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/vf2_sub_graph_iso.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/visitors.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/wavefront.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/graph/write_dimacs.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/pending/detail/property.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/pending/bucket_sorter.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/pending/container_traits.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/pending/fenced_priority_queue.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/pending/fibonacci_heap.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/pending/indirect_cmp.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/pending/is_heap.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/pending/mutable_heap.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/pending/mutable_queue.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/pending/property.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/pending/queue.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/pending/relaxed_heap.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/include/boost/pending/stringtok.hpp
        Projects/SpecCPP/third_party/boost/libs/graph/src/graphml.cpp
        Projects/SpecCPP/third_party/boost/libs/graph/src/read_graphviz_new.cpp
        Projects/SpecCPP/main.cpp
        Projects/SpecCPP2/include/misc.h
        Projects/SpecCPP2/include/scenegraph.h
        Projects/SpecCPP2/include/subgraph.h
        Projects/SpecCPP2/src/scenegraph.cpp
        Projects/SpecCPP2/src/subgraph.cpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/detail/algorithm.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/adj_list_edge_iterator.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/adjacency_list.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/array_binary_tree.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/augment.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/compressed_sparse_row_struct.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/connected_components.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/d_ary_heap.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/edge.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/geodesic.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/histogram_sort.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/incidence_iterator.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/incremental_components.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/index.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/indexed_properties.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/is_distributed_selector.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/labeled_graph_traits.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/list_base.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/permutation.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/read_graphviz_new.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/read_graphviz_spirit.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/self_avoiding_walk.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/set_adaptor.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/shadow_iterator.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/detail/sparse_ordering.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/planar_detail/add_edge_visitors.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/planar_detail/boyer_myrvold_impl.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/planar_detail/bucket_sort.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/planar_detail/face_handles.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/planar_detail/face_iterators.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/property_maps/constant_property_map.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/property_maps/container_property_map.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/property_maps/matrix_property_map.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/property_maps/null_property_map.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/adj_list_serialize.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/adjacency_iterator.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/adjacency_list.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/adjacency_list_io.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/adjacency_matrix.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/astar_search.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/bandwidth.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/bc_clustering.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/bellman_ford_shortest_paths.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/betweenness_centrality.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/biconnected_components.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/bipartite.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/boyer_myrvold_planar_test.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/boykov_kolmogorov_max_flow.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/breadth_first_search.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/bron_kerbosch_all_cliques.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/buffer_concepts.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/chrobak_payne_drawing.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/circle_layout.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/closeness_centrality.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/clustering_coefficient.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/compressed_sparse_row_graph.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/connected_components.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/copy.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/core_numbers.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/create_condensation_graph.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/cuthill_mckee_ordering.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/cycle_canceling.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/dag_shortest_paths.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/degree_centrality.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/depth_first_search.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/dijkstra_shortest_paths.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/dijkstra_shortest_paths_no_color_map.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/dimacs.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/directed_graph.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/dll_import_export.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/dominator_tree.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/eccentricity.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/edge_coloring.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/edge_connectivity.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/edge_list.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/edmonds_karp_max_flow.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/edmunds_karp_max_flow.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/erdos_renyi_generator.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/exception.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/exterior_property.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/filtered_graph.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/find_flow_cost.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/floyd_warshall_shortest.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/fruchterman_reingold.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/geodesic_distance.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/graph_archetypes.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/graph_as_tree.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/graph_concepts.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/graph_mutability_traits.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/graph_selectors.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/graph_stats.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/graph_test.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/graph_traits.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/graph_utility.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/graphml.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/graphviz.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/grid_graph.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/gursoy_atun_layout.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/hawick_circuits.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/howard_cycle_ratio.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/incremental_components.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/is_kuratowski_subgraph.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/is_straight_line_drawing.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/isomorphism.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/iteration_macros.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/iteration_macros_undef.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/johnson_all_pairs_shortest.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/kamada_kawai_spring_layout.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/king_ordering.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/kruskal_min_spanning_tree.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/labeled_graph.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/leda_graph.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/lookup_edge.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/loop_erased_random_walk.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/make_biconnected_planar.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/make_connected.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/make_maximal_planar.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/matrix_as_graph.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/max_cardinality_matching.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/maximum_adjacency_search.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/mcgregor_common_subgraphs.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/mesh_graph_generator.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/metis.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/metric_tsp_approx.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/minimum_degree_ordering.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/named_function_params.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/named_graph.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/neighbor_bfs.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/numeric_values.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/one_bit_color_map.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/overloading.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/page_rank.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/planar_canonical_ordering.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/planar_face_traversal.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/plod_generator.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/point_traits.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/prim_minimum_spanning_tree.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/profile.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/properties.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/property_iter_range.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/push_relabel_max_flow.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/r_c_shortest_paths.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/random.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/random_layout.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/random_spanning_tree.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/read_dimacs.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/relax.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/reverse_graph.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/rmat_graph_generator.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/sequential_vertex_coloring.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/simple_point.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/sloan_ordering.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/small_world_generator.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/smallest_last_ordering.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/ssca_graph_generator.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/st_connected.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/stanford_graph.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/stoer_wagner_min_cut.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/strong_components.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/subgraph.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/successive_shortest_path_nonnegative_weights.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/tiernan_all_cycles.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/topological_sort.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/topology.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/transitive_closure.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/transitive_reduction.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/transpose_graph.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/tree_traits.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/two_bit_color_map.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/two_graphs_common_spanning_trees.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/undirected_dfs.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/undirected_graph.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/use_mpi.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/vector_as_graph.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/vertex_and_edge_range.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/vf2_sub_graph_iso.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/visitors.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/wavefront.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/graph/write_dimacs.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/pending/detail/property.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/pending/bucket_sorter.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/pending/container_traits.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/pending/fenced_priority_queue.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/pending/fibonacci_heap.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/pending/indirect_cmp.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/pending/is_heap.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/pending/mutable_heap.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/pending/mutable_queue.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/pending/property.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/pending/queue.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/pending/relaxed_heap.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/include/boost/pending/stringtok.hpp
        Projects/SpecCPP2/third_party/boost/libs/graph/src/graphml.cpp
        Projects/SpecCPP2/third_party/boost/libs/graph/src/read_graphviz_new.cpp
        Projects/SpecCPP2/main.cpp
        Projects/SpecMatlab/include/matengine.h
        Projects/SpecMatlab/include/setlabels.h
        Projects/SpecMatlab/matlab/calc_cut.m
        Projects/SpecMatlab/matlab/calc_eigen.m
        Projects/SpecMatlab/matlab/extract.m
        Projects/SpecMatlab/matlab/get_class.m
        Projects/SpecMatlab/src/matengine.cpp
        Projects/SpecMatlab/src/setlabels.cpp
        Projects/SpecMatlab/main.cpp)
